add NativeCacheManager, JNI native support, query etc
Signed-off-by: Liyun Xiu <xiliyun@amazon.com>